tests/NormalTests/paczka1/small_fuzzy/35965162.err
Error in line 9: RJn7WJ0 A768 17,2
Error in line 13: dSDO597uV45 S670 50,4
Error in line 16: d`DO597uV45 A768 56,1
